# SimpleCFD

./: .gitignore  LICENSE  README.md
burgers_equation/: burgers1.f90  makefile  plot_burgers1.py
compressible/exact_riemann_solvers/: README.md  ers_euler_1d.f90  makefile
diffusion/: a.out  explicit1d.f90  plot1.py
diffusion/implicit/: implicit1.f90  makefile  plot.py
euler/exact_riemann_solvers/: README.md  ers_euler_1d.f90  ers_euler_ideal_1d.f90  helper.pro  makefile  plot1.py  pstar.f90
incompressible/CCAPS/: CMakeLists.txt  README.md  advance_module.f90  ccaps.f90  clean.sh  cleanout.sh  control.f90  diagnostics.f90  gauss_seidel.f90  makefile  setup.f90  shared_data.f90
incompressible/CCAPS/python_plotting/: ghia_re1e2.py  ghia_re1e3.py  ghia_re1e4.py
incompressible/CCAPS/src/: advance_module.f90  boundary_conditions.f90  control.f90  diagnostics.f90  initial_conditions.f90  multigrid.f90  setup.f90  shared_data.f90
incompressible/CCAPS/tests/lid_test/nx32_re1e2/: ghia.mov
incompressible/CCAPS/tests/minions_convergence_test/: minion_64  plot_minion_errors.py
incompressible/CCAPS/tests/results_before_facebugfix/shear_128_div/convergence_32/: 32.out
incompressible/CCAPS/tests/results_before_facebugfix/shear_128_div/shear_128/: shear_128.out
incompressible/CCAPS_atm_const/: README.md  advance_module.f90  boundary_conditions.f90  clean.sh  control.f90  gauss_seidel.f90  initial_conditions.f90  makefile  setup.f90  shared_data.f90
incompressible/CCAPS_vardens/: boundary_conditions.f90  ccaps.f90  control.f90  diagnostics.f90  initial_conditions.f90
linear_advection/: advect_1d_FD.f90  advect_1d_finitediff_1stO.f90  makefile  plot_advect_1d_FD.py  plot_advect_1d_finitediff_1stO.py
linear_advection/2D/: advect2d.f90  advect_2d.f90  advection2d.f90  makefile  plot_advect_2d.py
lowmach/CCAPS/: README.md  clean.sh  debug.sh  make.sh
lowmach/CCAPS_beforenewbc/: CMakeLists.txt  README.md  build.sh
lowmach/CCAPS_vardens/: README.md
multigrid/: makefile  poission_2grid_test.f90
multigrid/2D/: makefile  multigrid.f90  multigrid_2d.f90  test.f90  test1.f90  test2.f90  test2_constHelmholtz.f90  test2_plots.py  test5  (+11 more)
projection_methods/: plot_smooth1.py  smooth1.f90
(+114 files in other folders)
